[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Houses/House2_floor1.gd" type="Script" id=1]
[ext_resource path="res://Art/Images/Houses/house1_floor1.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Houses/Highlight.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 77.5, 141 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 826.5, 23.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 34.75, 271.625 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 83.125, 163.125 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 60, 39 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 74.5, 5.54688 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 80.5, 102 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 150.75, 123 )

[node name="House2_floor1" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Area2D"]
position = Vector2( 995, 558 )
scale = Vector2( 1.61309, 1.30784 )
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 1000, 1000 )

[node name="CollisionWalls" type="StaticBody2D" parent="Area2D"]

[node name="Couch" type="CollisionShape2D" parent="Area2D/CollisionWalls"]
position = Vector2( 1367.5, 441 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D/CollisionWalls"]
position = Vector2( 949.5, 131.5 )
shape = SubResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D/CollisionWalls"]
polygon = PoolVector2Array( 123, 646, 293, 646, 310, 667, 313, 823, 689, 827, 691, 890, 827, 889, 827, 868, 889, 868, 888, 718, 935, 670, 1278, 671, 1288, 678, 1288, 726, 1258, 728, 1258, 815, 1231, 836, 1204, 838, 1175, 815, 1180, 733, 965, 733, 964, 950, 1191, 954, 1196, 944, 1229, 943, 1249, 960, 1248, 976, 1289, 977, 1290, 993, 122, 990 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D/CollisionWalls"]
position = Vector2( 156.25, 377.375 )
shape = SubResource( 3 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D/CollisionWalls"]
position = Vector2( -15, -45 )
polygon = PoolVector2Array( 1461, 1020, 1492, 1020, 1491, 935, 1510, 921, 1571, 923, 1578, 991, 1744, 990, 1745, 774, 1573, 774, 1570, 836, 1541, 837, 1503, 798, 1504, 773, 1481, 773, 1461, 764, 1462, 739, 1482, 717, 1658, 719, 1657, 308, 1702, 248, 1744, 249, 1740, 155, 1796, 146, 1797, 1041, 1682, 1041, 1526, 1041, 1463, 1040 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Area2D/CollisionWalls"]
position = Vector2( 494.875, 393.875 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D/CollisionWalls"]
position = Vector2( 981, 207 )
shape = SubResource( 5 )

[node name="Frontdoor" type="Area2D" parent="Area2D"]

[node name="CollisionShape" type="CollisionShape2D" parent="Area2D/Frontdoor"]
position = Vector2( 1374, 1011 )
scale = Vector2( 1.75, 1.75 )
shape = SubResource( 6 )

[node name="Stairs" type="Area2D" parent="Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D/Stairs"]
position = Vector2( 1050.5, 842 )
shape = SubResource( 7 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 1370, 886 )

[node name="DishWashergame" type="Area2D" parent="."]
position = Vector2( -335, 558 )

[node name="Dishwasher" type="CollisionShape2D" parent="DishWashergame"]
position = Vector2( 1094, 301 )
shape = SubResource( 8 )

[node name="DishwasherHighlight" type="Polygon2D" parent="DishWashergame"]
position = Vector2( 35, 216 )
scale = Vector2( 0.954479, 0.353846 )
color = Color( 1, 1, 1, 0 )
polygon = PoolVector2Array( 1035.12, 322.174, 1028.83, 570.87, 1185.99, 573.696, 1181.8, 327.826 )
script = ExtResource( 4 )
Width = 3.0

[node name="ReplaceLights" type="Area2D" parent="."]

[node name="ReplaceLights" type="CollisionShape2D" parent="ReplaceLights"]
position = Vector2( 974, 294 )
shape = SubResource( 8 )

[node name="ReplaceHighlight" type="Polygon2D" parent="ReplaceLights"]
position = Vector2( 53, 236 )
scale = Vector2( 0.954479, 0.353846 )
color = Color( 1, 1, 1, 0 )
polygon = PoolVector2Array( 911.492, -180.87, 905.206, 25.4348, 1038.26, 36.7392, 1033.02, -189.348 )
script = ExtResource( 4 )
Width = 3.0

[connection signal="body_entered" from="Area2D/Frontdoor" to="." method="_on_Frontdoor_body_entered"]
[connection signal="body_entered" from="Area2D/Stairs" to="." method="_on_Stairs_body_entered"]
[connection signal="body_entered" from="DishWashergame" to="." method="_on_DishWashergame_body_entered"]
[connection signal="body_exited" from="DishWashergame" to="." method="_on_DishWashergame_body_exited"]
[connection signal="body_entered" from="ReplaceLights" to="." method="_on_ReplaceLights_body_entered"]
[connection signal="body_exited" from="ReplaceLights" to="." method="_on_ReplaceLights_body_exited"]
